feat: parent child views with 3 column layout

--- a/src/RazorSectionsLayouts/Views/Home/Index.cshtml
+++ b/src/RazorSectionsLayouts/Views/Home/Index.cshtml
@@ -1,8 +1,9 @@
 ﻿@{
   ViewData["Title"] = "Home Page";
-}
+  Layout = "_Layout3Columns";
+  }
 
-<div class="text-center">
+<div class="">
   <h1 class="text-4xl">Welcome</h1>
   <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
 </div>
