--- a/src/RazorSectionsLayouts/Views/Shared/_Layout3Columns.cshtml
+++ b/src/RazorSectionsLayouts/Views/Shared/_Layout3Columns.cshtml
@@ -2,6 +2,8 @@
       lang="en">
 
 <head>
+  <title>@ViewData["Title"] - RazorSectionsLayouts</title>
+
   <link href="~/css/site.css"
         rel="stylesheet">
 </head>
@@ -412,7 +414,7 @@ This example requires updating your template:
       <!-- Start main area-->
       <div class="absolute inset-0 py-6 px-4 sm:px-6 lg:px-8">
         <div class="h-full rounded-lg border-2 border-dashed border-gray-200">
-          @await RenderSectionAsync("main", false)
+          @await RenderSectionAsync("detail", false)
         </div>
       </div>
       <!-- End main area -->
@@ -420,7 +422,7 @@ This example requires updating your template:
     <aside class="relative hidden w-96 flex-shrink-0 overflow-y-auto border-r border-gray-200 xl:order-first xl:flex xl:flex-col">
       <!-- Start secondary column (hidden on smaller screens) -->
       <div class="absolute inset-0 py-6 px-4 sm:px-6 lg:px-8">
-        <div class="h-full rounded-lg border-2 border-dashed border-gray-200">@await RenderSectionAsync("secondary", false)</div>
+        <div class="h-full rounded-lg border-2 border-dashed border-gray-200">@await RenderSectionAsync("list", false)</div>
       </div>
       <!-- End secondary column -->
     </aside>
