--- a/src/RazorSectionsLayouts/Views/Shared/_Layout3Columns.cshtml
+++ b/src/RazorSectionsLayouts/Views/Shared/_Layout3Columns.cshtml
@@ -6,6 +6,7 @@
 
   <link href="~/css/site.css"
         rel="stylesheet">
+  <script src="~/lib/htmx.org/dist/htmx.min.js"></script>
 </head>
 <body class="h-full overflow-hidden">
 
